<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.ProductDetailFragment"
    android:background="@drawable/makeup">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@color/background_linearlayout_productdetail"
          android:orientation="vertical">

         <TextView
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="@font/acme"
             android:lines="2"
             android:text="@string/tv_name"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />

         <ImageView
             android:id="@+id/image"
             android:layout_width="150dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
             android:padding="10dp"
             tools:srcCompat="@drawable/ic_noimage" />

         <TextView
             android:id="@+id/tv_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:fontFamily="@font/acme"
             android:text="@string/tv_price"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/tv_weblink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="@font/acme"
             android:text="@string/tv_link"
             android:textAlignment="center"
             android:textColor="@color/link"
             android:textSize="16dp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:fontFamily="@font/acme"
             android:maxLines="100"
             android:minLines="14"
             android:text="@string/tv_description"
             android:textColor="@color/black"
             android:textSize="16dp" />

      </LinearLayout>

   </ScrollView>

</LinearLayout>