<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/product_item"
    android:orientation="vertical"
    android:padding="10dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/product_item">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/image_cornerrradious"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="277dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/acme"
            android:maxLines="3"
            android:minLines="1"
            android:text="@string/tv_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_image"
            tools:ignore="TextSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <TextView
                android:id="@+id/tv_brand_category"
                android:layout_width="150dp"
                android:layout_height="18dp"
                android:layout_margin="15dp"
                android:fontFamily="@font/acme"
                android:lines="2"
                android:text="@string/tv_brand_category"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="85dp"
                android:layout_height="16dp"
                android:layout_margin="15dp"
                android:fontFamily="@font/acme"
                android:text="@string/tv_price"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="14dp"
                tools:ignore="TextSizeCheck" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>